# DDF

./: .clang-tidy  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  cmake_install.cmake  main.cpp  utils.cpp  utils.h
.github/workflows/: build.yml
ISSUE_TEMPLATE/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  bug_report.md
Testing/Temporary/: CTestCostData.txt
ddf.dir/Release/: ddf.exe.recipe
ddf.dir/Release/ddf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: examples.md  grammar.md  index.md
lib/Release/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
src/: ast.hpp  main.cpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  utils.cpp  utils.h  utils.hpp
test_ddf.dir/Release/: test_ddf.exe.recipe
test_ddf.dir/Release/test_ddf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test_parser.dir/Release/: test_parser.exe.recipe
test_parser.dir/Release/test_parser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_parser.lastbuildstate
test_semantic.dir/Release/: test_semantic.exe.recipe
test_semantic.dir/Release/test_semantic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: test_parser.cpp  test_semantic.cpp  test_utils.cpp
